[tool.poetry]
name = "fuchs"
version = "0.1.0"
description = ""
authors = ["cheetahbyte <bernerdoodle@outlook.de>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
